{
  "version": 4,
  "terraform_version": "1.14.2",
  "serial": 182,
  "lineage": "31317ea2-54b8-a6d8-fc71-697fd54d4f06",
  "resources": [
    {
      "module": "module.app1-global-lb-backend",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/utilitarian-chemist-kvbmb/regions/us-central1/networkEndpointGroups/neg-app1-global-lb-backend-us-central1-f2f1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "compression_mode": "DISABLED",
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-12-12T12:54:15.676-08:00",
            "enable_cdn": false,
            "external_managed_migration_testing_percentage": 0,
            "fingerprint": "xhAhOLY8hbw=",
            "generated_id": 2490349159447608856,
            "id": "projects/utilitarian-chemist-kvbmb/global/backendServices/app1-global-lb-backend",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "log_config": [
              {
                "enable": true,
                "optional_mode": "EXCLUDE_ALL_OPTIONAL",
                "sample_rate": 1
              }
            ],
            "name": "app1-global-lb-backend",
            "port_name": "http",
            "project": "utilitarian-chemist-kvbmb",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/utilitarian-chemist-kvbmb/global/backendServices/app1-global-lb-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.apphub_api_service",
            "google_project_service.secretmanager_api_service",
            "google_project_service.sqladmin_api_service",
            "module.app1-backend-service.google_cloud_run_v2_service.main",
            "module.app1-backend-service.google_project_iam_member.roles",
            "module.app1-backend-service.google_service_account.sa",
            "module.app1-database-postgresql.data.google_kms_key_handle.key_handle",
            "module.app1-database-postgresql.google_kms_key_handle.default",
            "module.app1-database-postgresql.google_sql_database_instance.default",
            "module.app1-database-postgresql.null_resource.module_depends_on",
            "module.app1-database-postgresql.random_id.suffix",
            "module.app1-database-postgresql.random_password.user-password",
            "module.app1-database-secret.google_secret_manager_secret.secret",
            "module.app1-database-secret.google_secret_manager_secret_version.version",
            "module.app1-frontend-service.google_cloud_run_v2_service.main",
            "module.app1-frontend-service.google_project_iam_member.roles",
            "module.app1-frontend-service.google_service_account.sa",
            "module.app1-global-lb-backend.google_compute_health_check.default",
            "module.app1-global-lb-backend.google_compute_region_network_endpoint_group.psc_negs",
            "module.app1-global-lb-backend.google_compute_region_network_endpoint_group.serverless_negs"
          ]
        }
      ]
    },
    {
      "module": "module.app1-global-lb-backend",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.app1-global-lb-backend",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-hc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.app1-global-lb-frontend",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "35.241.10.95",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-12-12T11:20:13.124-08:00",
            "effective_labels": {
              "goog-adc-tf-deployment": "export",
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/utilitarian-chemist-kvbmb/global/addresses/app1-global-lb-frontend-address",
            "label_fingerprint": "E4-YdoMZJrM=",
            "name": "app1-global-lb-frontend-address",
            "prefix_length": 0,
            "project": "utilitarian-chemist-kvbmb",
            "self_link": "https://www.googleapis.com/compute/v1/projects/utilitarian-chemist-kvbmb/global/addresses/app1-global-lb-frontend-address",
            "terraform_labels": {
              "goog-adc-tf-deployment": "export",
              "goog-terraform-provisioned": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.apphub_api_service"
          ]
        }
      ]
    },
    {
      "module": "module.app1-global-lb-frontend",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]"
    },
    {
      "module": "module.app1-global-lb-frontend",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "effective_labels": {
              "goog-adc-tf-deployment": "export"
            },
            "external_managed_backend_bucket_migration_testing_percentage": 0,
            "forwarding_rule_id": 8550039266637463465,
            "id": "projects/utilitarian-chemist-kvbmb/global/forwardingRules/app1-global-lb-frontend",
            "ip_address": "35.241.10.95",
            "ip_protocol": "TCP",
            "label_fingerprint": "GIShDgcYt7I=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "app1-global-lb-frontend",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "utilitarian-chemist-kvbmb",
            "self_link": "https://www.googleapis.com/compute/v1/projects/utilitarian-chemist-kvbmb/global/forwardingRules/app1-global-lb-frontend",
            "target": "https://www.googleapis.com/compute/beta/projects/utilitarian-chemist-kvbmb/global/targetHttpProxies/app1-global-lb-frontend-http-proxy",
            "terraform_labels": {
              "goog-adc-tf-deployment": "export"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.apphub_api_service",
            "google_project_service.secretmanager_api_service",
            "google_project_service.sqladmin_api_service",
            "module.app1-backend-service.google_cloud_run_v2_service.main",
            "module.app1-backend-service.google_project_iam_member.roles",
            "module.app1-backend-service.google_service_account.sa",
            "module.app1-database-postgresql.data.google_kms_key_handle.key_handle",
            "module.app1-database-postgresql.google_kms_key_handle.default",
            "module.app1-database-postgresql.google_sql_database_instance.default",
            "module.app1-database-postgresql.null_resource.module_depends_on",
            "module.app1-database-postgresql.random_id.suffix",
            "module.app1-database-postgresql.random_password.user-password",
            "module.app1-database-secret.google_secret_manager_secret.secret",
            "module.app1-database-secret.google_secret_manager_secret_version.version",
            "module.app1-frontend-service.google_cloud_run_v2_service.main",
            "module.app1-frontend-service.google_project_iam_member.roles",
            "module.app1-frontend-service.google_service_account.sa",
            "module.app1-global-lb-backend.google_compute_backend_bucket.default",
            "module.app1-global-lb-backend.google_compute_backend_service.default",
            "module.app1-global-lb-backend.google_compute_health_check.default",
            "module.app1-global-lb-backend.google_compute_region_network_endpoint_group.psc_negs",
            "module.app1-global-lb-backend.google_compute_region_network_endpoint_group.serverless_negs",
            "module.app1-global-lb-frontend.google_compute_global_address.default",
            "module.app1-global-lb-frontend.google_compute_target_http_proxy.default",
            "module.app1-global-lb-frontend.google_compute_url_map.default",
            "module.app1-global-lb-frontend.google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.app1-global-lb-frontend",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]"
    },
    {
      "module": "module.app1-global-lb-frontend",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]"
    },
    {
      "module": "module.app1-global-lb-frontend",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]"
    },
    {
      "module": "module.app1-global-lb-frontend",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "internal_managed_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]"
    },
    {
      "module": "module.app1-global-lb-frontend",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "internal_managed_http_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]"
    },
    {
      "module": "module.app1-global-lb-frontend",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "internal_managed_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]"
    },
    {
      "module": "module.app1-global-lb-frontend",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "internal_managed_https_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]"
    },
    {
      "module": "module.app1-global-lb-frontend",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-12T12:55:21.755-08:00",
            "fingerprint": "0xdgomRXPWY=",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/utilitarian-chemist-kvbmb/global/targetHttpProxies/app1-global-lb-frontend-http-proxy",
            "name": "app1-global-lb-frontend-http-proxy",
            "project": "utilitarian-chemist-kvbmb",
            "proxy_bind": false,
            "proxy_id": 2539458159107456982,
            "self_link": "https://www.googleapis.com/compute/v1/projects/utilitarian-chemist-kvbmb/global/targetHttpProxies/app1-global-lb-frontend-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/utilitarian-chemist-kvbmb/global/urlMaps/app1-global-lb-frontend-url-map"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.apphub_api_service",
            "google_project_service.secretmanager_api_service",
            "google_project_service.sqladmin_api_service",
            "module.app1-backend-service.google_cloud_run_v2_service.main",
            "module.app1-backend-service.google_project_iam_member.roles",
            "module.app1-backend-service.google_service_account.sa",
            "module.app1-database-postgresql.data.google_kms_key_handle.key_handle",
            "module.app1-database-postgresql.google_kms_key_handle.default",
            "module.app1-database-postgresql.google_sql_database_instance.default",
            "module.app1-database-postgresql.null_resource.module_depends_on",
            "module.app1-database-postgresql.random_id.suffix",
            "module.app1-database-postgresql.random_password.user-password",
            "module.app1-database-secret.google_secret_manager_secret.secret",
            "module.app1-database-secret.google_secret_manager_secret_version.version",
            "module.app1-frontend-service.google_cloud_run_v2_service.main",
            "module.app1-frontend-service.google_project_iam_member.roles",
            "module.app1-frontend-service.google_service_account.sa",
            "module.app1-global-lb-backend.google_compute_backend_bucket.default",
            "module.app1-global-lb-backend.google_compute_backend_service.default",
            "module.app1-global-lb-backend.google_compute_health_check.default",
            "module.app1-global-lb-backend.google_compute_region_network_endpoint_group.psc_negs",
            "module.app1-global-lb-backend.google_compute_region_network_endpoint_group.serverless_negs",
            "module.app1-global-lb-frontend.google_compute_url_map.default",
            "module.app1-global-lb-frontend.google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.app1-global-lb-frontend",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.app1-global-lb-frontend",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-12T12:55:09.922-08:00",
            "default_custom_error_response_policy": [],
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/utilitarian-chemist-kvbmb/global/backendServices/app1-global-lb-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "r9yworRMAKc=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "*"
                ],
                "path_matcher": "default"
              }
            ],
            "id": "projects/utilitarian-chemist-kvbmb/global/urlMaps/app1-global-lb-frontend-url-map",
            "map_id": 7448203438784069571,
            "name": "app1-global-lb-frontend-url-map",
            "path_matcher": [
              {
                "default_custom_error_response_policy": [],
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/utilitarian-chemist-kvbmb/global/backendServices/app1-global-lb-backend",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "default",
                "path_rule": [],
                "route_rules": []
              }
            ],
            "project": "utilitarian-chemist-kvbmb",
            "self_link": "https://www.googleapis.com/compute/v1/projects/utilitarian-chemist-kvbmb/global/urlMaps/app1-global-lb-frontend-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.apphub_api_service",
            "google_project_service.secretmanager_api_service",
            "google_project_service.sqladmin_api_service",
            "module.app1-backend-service.google_cloud_run_v2_service.main",
            "module.app1-backend-service.google_project_iam_member.roles",
            "module.app1-backend-service.google_service_account.sa",
            "module.app1-database-postgresql.data.google_kms_key_handle.key_handle",
            "module.app1-database-postgresql.google_kms_key_handle.default",
            "module.app1-database-postgresql.google_sql_database_instance.default",
            "module.app1-database-postgresql.null_resource.module_depends_on",
            "module.app1-database-postgresql.random_id.suffix",
            "module.app1-database-postgresql.random_password.user-password",
            "module.app1-database-secret.google_secret_manager_secret.secret",
            "module.app1-database-secret.google_secret_manager_secret_version.version",
            "module.app1-frontend-service.google_cloud_run_v2_service.main",
            "module.app1-frontend-service.google_project_iam_member.roles",
            "module.app1-frontend-service.google_service_account.sa",
            "module.app1-global-lb-backend.google_compute_backend_bucket.default",
            "module.app1-global-lb-backend.google_compute_backend_service.default",
            "module.app1-global-lb-backend.google_compute_health_check.default",
            "module.app1-global-lb-backend.google_compute_region_network_endpoint_group.psc_negs",
            "module.app1-global-lb-backend.google_compute_region_network_endpoint_group.serverless_negs"
          ]
        }
      ]
    },
    {
      "module": "module.app1-global-lb-frontend",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "https_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    }
  ]
}